refactor: Phase 3 - Inject IEmailService into EmailSendCommand and simplify result handling
- Refactored EmailSendCommand to use dependency injection for IEmailService via a mutable static instance variable (@TestVisible public static IEmailService emailService), following the project's preferred pattern.
- Updated the execute() method to call emailService.sendEmails instead of Messaging.sendEmail, enabling test-time mocking and production flexibility.
- Removed all unnecessary null checks in the main for loop, relying on the contract that the results list is non-null, matches the size of the emails list, and contains only non-null elements.
- Simplified result handling: now directly matches each Messaging.SendEmailResult to its corresponding opportunity result by index, and uses isSuccess() and getErrors() without null checks.
- Updated error handling to ensure all failed opportunities are marked appropriately and error messages are clear.
- No changes to the public API or constructor signature; backward compatibility is maintained.
- This phase completes the transition to a fully testable, injectable, and robust email sending command, ready for use with both production and mock email services.

--- a/force-app/main/default/classes/commands/EmailSendCommand.cls
+++ b/force-app/main/default/classes/commands/EmailSendCommand.cls
@@ -7,6 +7,9 @@ public with sharing class EmailSendCommand implements IAcknowledgementCommand {
   private List<DonationAcknowledgementService.OpportunityResult> opportunityResults;
   private AcknowledgementCommandOutputs.SendOutput sendOutput;
 
+  @TestVisible
+  public static IEmailService emailService = new SalesforceEmailService();
+
   public EmailSendCommand(
     List<Messaging.SingleEmailMessage> emails,
     List<DonationAcknowledgementService.OpportunityResult> opportunityResults
@@ -29,22 +32,46 @@ public with sharing class EmailSendCommand implements IAcknowledgementCommand {
     }
 
     try {
-      Messaging.sendEmail(emails);
-
-      // Mark all prepared opportunities as successful
+      List<Messaging.SendEmailResult> results = emailService.sendEmails(emails);
       Date today = Date.today();
-      for (
-        DonationAcknowledgementService.OpportunityResult oppResult : opportunityResults
-      ) {
-        oppResult.setStatus(
-          DonationAcknowledgementService.AckStatus.SUCCESS,
-          'Email sent successfully'
-        );
-        oppResult.acknowledgmentDate = today;
-      }
+      Boolean allSuccessful = true;
 
-      sendOutput = new AcknowledgementCommandOutputs.SendOutput()
-        .setSuccess(opportunityResults);
+      // For each opportunity result, match to its corresponding email send result by index.
+      // If the email was sent successfully, mark as SUCCESS and set the acknowledgment date.
+      // If the email failed, mark as EMAIL_SEND_FAILED and record the error message.
+      for (Integer i = 0; i < opportunityResults.size(); i++) {
+        DonationAcknowledgementService.OpportunityResult oppResult = opportunityResults[
+          i
+        ];
+        Messaging.SendEmailResult emailResult = results[i];
+        if (emailResult.isSuccess()) {
+          oppResult.setStatus(
+            DonationAcknowledgementService.AckStatus.SUCCESS,
+            'Email sent successfully'
+          );
+          oppResult.acknowledgmentDate = today;
+        } else {
+          allSuccessful = false;
+          String errorMsg = 'Email sending failed';
+          if (!emailResult.getErrors().isEmpty()) {
+            errorMsg += ': ' + emailResult.getErrors()[0].getMessage();
+          }
+          oppResult.setStatus(
+            DonationAcknowledgementService.AckStatus.EMAIL_SEND_FAILED,
+            errorMsg
+          );
+        }
+      }
+      if (allSuccessful) {
+        sendOutput = new AcknowledgementCommandOutputs.SendOutput()
+          .setSuccess(opportunityResults);
+      } else {
+        sendOutput = new AcknowledgementCommandOutputs.SendOutput()
+          .setFailure(
+            'Failed to send acknowledgement emails',
+            opportunityResults
+          );
+      }
     } catch (EmailException ee) {
       System.debug(
         LoggingLevel.ERROR,
